<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include
                    layout="@layout/appheader_type"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/todo_title_margin"
                    android:layout_marginTop="@dimen/todo_title_margin"
                    android:fontFamily="@font/nanumpen"
                    android:textColor="@color/color_block"
                    android:textSize="25sp"
                    android:text="@string/main_title_todo"/>

                <EditText
                    android:id="@+id/todo_contents"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/todo_contents_height"
                    android:layout_margin="@dimen/todo_contents_margin"
                    android:background="@android:drawable/editbox_background"
                    android:focusableInTouchMode="true"
                    android:gravity="start"
                    android:hint="@string/todo_contents_hint"
                    android:maxHeight="288dp"
                    android:maxLength="100"
                    android:minHeight="288dp"
                    android:textColor="@color/color_gray"
                    android:textSize="15sp" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/todo_title_margin"
                        android:fontFamily="@font/nanumpen"
                        android:text="@string/todo_title_color"
                        android:textColor="@color/color_block"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageButton
                        android:id="@+id/todo_color_btn"
                        android:layout_width="@dimen/todo_color_btn_size"
                        android:layout_height="@dimen/todo_color_btn_size"
                        android:layout_margin="@dimen/todo_title_margin"
                        android:scaleType="centerCrop"
                        android:background="@null"
                        android:src="@drawable/add_24px"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />
                </android.support.constraint.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/todo_color"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"></View>
            </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/btnSave"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/color_btn_unable">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquareroundr"
            android:text="@string/todo_save"
            android:textColor="@color/color_white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>
</FrameLayout>
