<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Main.MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/main_padding">

            <LinearLayout
                android:id="@+id/layout_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/todo_title_margin"
                    android:fontFamily="@font/nanumpen"
                    android:text="@string/main_title_todo"
                    android:textColor="@color/color_block"
                    android:textSize="25sp" />

                <LinearLayout
                    android:id="@+id/layout_todo_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/main_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="@dimen/todo_title_margin"
                        android:fontFamily="@font/nanumpen"
                        android:text="@string/main_title_completed_todo"
                        android:textColor="@color/color_block"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/todo_title_margin"
                        android:text="@string/main_title_completed_guide"
                        android:fontFamily="@font/nanumsquareroundr"
                        android:textColor="@color/color_gray"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.684" />
                </android.support.constraint.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/layout_completed_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnFAB"
        android:layout_width="@dimen/main_floating_btn_size"
        android:layout_height="@dimen/main_floating_btn_size"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/main_floating_btn_margin"
        android:background="@drawable/add_circle_24px"
        android:elevation="@dimen/elevation_high" />
</FrameLayout>
